--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,32 @@
         <item name="android:windowBackground">@drawable/background_splashscreen</item>
     </style>
 
+    <style name="Form_EditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginHorizontal">30sp</item>
+        <item name="android:layout_marginVertical">10sp</item>
+        <item name="android:backgroundTint">@color/Red</item>
+        <item name="android:fontFamily">@font/righteous</item>
+        <item name="android:textAlignment">textEnd</item>
+        <item name="android:layout_gravity">end</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColorHint">@color/Red</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:inputType">text</item>
+    </style>
+
+    <style name="Form_Title">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/righteous</item>
+        <item name="android:textAlignment">viewEnd</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginVertical">10sp</item>
+        <item name="android:layout_marginRight">30sp</item>
+    </style>
+
+
 </resources>
