--- a/app/src/main/res/values/strings_form.xml
+++ b/app/src/main/res/values/strings_form.xml
@@ -9,4 +9,5 @@
     <string name="hint_city">CITY</string>
     <string name="hint_street_number">STREET + (NUMBER)</string>
     <string name="send_button">SEND</string>
+    <string name="toast_message">Your request has been sent!</string>
 </resources>
